--- a/style.css
+++ b/style.css
@@ -13,3 +13,32 @@ html {
     width: 644px;
     border: 3px solid white;
 }
+
+#important {
+    color: #ff6600;
+    font-family: monospace;
+    font-size: 112px;
+    position: relative;
+    bottom: 100px;
+    left: 150px;
+}
+
+#importantbuttons {
+    color: white;
+}
+
+#flipvid {
+    position: relative;
+    bottom: 25px;
+    left: 150px;
+    top: 25px;
+
+}
+
+#flipvid2 {
+    position: relative;
+    bottom: 25px;
+    left:150px;
+    top: 25px;
+
+}
